# Organize-but-python

./: .gitignore  LICENSE  README.md  a.py  clear.py  create-example.py  create_example.py  lalala.py  pyproject.toml  test.py
organize/: core.py  log.py  organizadinho.py  undo.py
organize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
organize/gui/: copia.css.map  gui.py  index.html  main.py  script.js
