[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "organize"
version = "0.2.0"
description = "Ferramenta CLI para organizar arquivos por categoria"
authors = [
    { name = "Erik" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[tool.setuptools.package-data]
"organize.gui" = ["*.html", "*.css", "*.js"]

[project.scripts]
organize = "organize.organizadinho:main"