[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "organize"
version = "0.2.4"
description = "Ferramenta CLI e GUI para organizar arquivos por categoria"
authors = [
    { name = "Erik" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[tool.setuptools.package-data]
"organize.gui" = ["*.html", "*.css", "*.js", "images/*"]

[project.scripts]
organize = "organize.organizadinho:main"